# webserv

./: CMakeLists.txt  Makefile  README.md  webserv.cpp
42tests/: 42tester.txt
Config/: CMakeLists.txt
Config/include/Config/: IParser.hpp  Location.hpp  LocationList.hpp  MimeTypes.hpp  Parser.hpp  Server.hpp  ServerConfig.hpp  Token.hpp  mime.types
Config/src/: Location.cpp  LocationList.cpp  MimeTypes.cpp  Server.cpp  ServerConfig.cpp  Token.cpp
Config/test/: CMakeLists.txt  CTestTestfile.cmake  ConfigTests  Makefile  cmake_install.cmake
Config/test/src/: ListenTests.cpp  LocationListTests.cpp  LocationTests.cpp  MimeTypesTests.cpp  ParserTests.cpp  ServerConfigTests.cpp  ServerListTests.cpp  ServerTests.cpp
HTTP/: CMakeLists.txt
HTTP/include/HTTP/: BufferIn.hpp  BufferOut.hpp  CGI.hpp  ChunkedBody.hpp  Headers.hpp  HttpBuilder.hpp  IFileIO.hpp  Request.hpp  RequestHandler.hpp  Response.hpp  Server.hpp  SocketIO.hpp  StatusCodes.hpp
HTTP/src/: BufferIn.cpp  BufferOut.cpp  CGI.cpp  ChunkedBody.cpp  Headers.cpp  HttpBuilder.cpp  Request.cpp  RequestHandler.cpp  Response.cpp  Server.cpp  SocketIO.cpp  StatusCodes.cpp
HTTP/test/: CMakeLists.txt  CTestTestfile.cmake  HTTPTests  Makefile  cmake_install.cmake
HTTP/test/src/: BufferInTests.cpp  BufferOutTests.cpp  ChunkedBodyTests.cpp  GetHandlerTests.cpp  HeadersTests.cpp  HttpBuilderTests.cpp  RequestTests.cpp  ResponseTests.cpp  SocketIOTests.cpp  TCPServerTests.cpp
Utils/: CMakeLists.txt
Utils/include/Utils/: Encoding.hpp  File.hpp  IFile.hpp  IFileSystemEntry.hpp  Mutex.hpp  String.hpp  Unique_ptr.hpp  Uri.hpp  Utf8.hpp
Utils/src/: Encoding.cpp  File.cpp  Mutex.cpp  String.cpp  Uri.cpp  Utf8.cpp
Utils/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  UtilsTests  cmake_install.cmake
Utils/test/src/: FileTests.cpp  StringTests.cpp  UriTests.cpp  Utf8Tests.cpp
cgi-bin/: post_cgi  post_cgi.cpp  print_cgi.cpp  test_cgi  test_cgi.c
conf/: tester.conf  tester_ubuntu.conf  webserv.conf  webserv_ubuntu.conf
data/YoupiBanane/: youpi.bad_extension
data/regex/: hello.txt
data/www/: 404notfound.html  NewPost.html  Post.html  flower.html  form.html  form2.html  fredrika.html  hello.lua  hello.py  index.fr.html  index.fr.utf-8.html  index.html.en  index.html.en.utf-8  index.html.se  index.js  index.se.txt  index.txt.en  index.utf-8.html.se  js.html  proxy.html  test.html  test.php  time.html
data/www/BOM/: BOM.html  smallwindow.html
data/www/DOM/: addingChild.html  goto.html  hideandseek.js  index.html  style.css
data/www/canvas/: canvas.html  drawing.js
data/www/dropdown_menu/: index.html  index.js  style.css
data/www/formsAndTables/: formprocessor.html  forms.html  tables.html
data/www/formtests/: form.html
data/www/formtests/templates/: form.html  greeting.html
data/www/upload/: .html  Coloc.html  Hej.html  Testing_this.html  f.html  fag.html  myPost.html  ny.html  testing.html  testsa_.html
data/www/weird/: With space.html  äoöoå.html
